# ml-reentry-mlir

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  conftest.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/: __init__.py
examples/models/: __init__.py  gat.py  gcn.py  sage.py
experiments/day-zero/fx-sparsity/: README.md  run.py
experiments/day-zero/fx-sparsity/dumps/: b-sparse-mm.2-linalg.mlir  b-sparse-mm.3-sparsifier.mlir  c-matmul.2-linalg.mlir
experiments/day-zero/gpu-sparsifier/: README.md  run.sh
experiments/day-zero/gpu-sparsifier/dumps/: cpu.lowered.mlir
experiments/day-zero/pyg-baseline/: README.md  results-nolibs-compile.json  results-nolibs.json  results.json  run.py
experiments/day-zero/task-1-fx-sparsity/: run.py
experiments/day-zero/task-1-fx-sparsity/dumps/: a-gcn.2-linalg.mlir  b-sparse-mm.0-sparse-mm-rejected.mlir  c-matmul.1-raw-torch.mlir  c-matmul.3-sparsifier.mlir
experiments/day-zero/task-2-gpu-sparsifier/dumps/: cpu.out.txt  gpu-codegen.lowered.mlir  gpu-codegen.out.txt  gpu-libgen.lowered.mlir  gpu-libgen.out.txt
experiments/day-zero/task-3-pyg-baseline/: run.py
experiments/day-zero/task-3b-inductor-fusion/: run.py
experiments/day-zero/task-3b-inductor-fusion/dumps/: gatconv-libs.unit0.py
experiments/dynamo-graph-breaks/: README.md  run.py
experiments/dynamo-graph-breaks/dumps/: breaks.txt  visibility.txt
experiments/fx-sparsity/: README.md
experiments/fx-sparsity/dumps/: a-gcn.1-raw-torch.mlir  a-gcn.3-sparsifier-error.txt  b-sparse-mm.1-raw-torch.mlir
experiments/gat-gpu-codegen/: README.md  gat-kernel.mlir
experiments/gat-gpu-codegen/dumps/: cpu.lowered.mlir  cpu.out.txt  gpu-codegen.lowered.mlir
experiments/gatconv/: README.md  run.py
experiments/gpu-sparsifier/: README.md  run.sh  spmm-cpu.mlir  spmm-gpu.mlir
experiments/inductor-fusion/: README.md  run-followup.py
experiments/inductor-fusion/dumps/: gatconv-libs.unit2.py  gatconv-nolibs.unit1.py
experiments/inductor-fusion/dumps/followup/: gat2-nolibs.unit0.py  gatconv-1L-nolibs.unit0.py
experiments/m0/gat-gpu-codegen/: README.md  run.py
experiments/m0/gat-gpu-codegen/dumps/: gpu-codegen.out.txt
experiments/m0/gatconv/: README.md  run.py
experiments/m0/gatconv/dumps/: gat.1-raw-torch.mlir  gat.2-linalg.mlir  gat.3-sparsifier-error.txt
experiments/pyg-baseline/: README.md  run.py
experiments/sparsifier-coo-check/: 01-spmm-coo.mlir  01-spmm-csr.mlir  02-scale-coo.mlir  02-scale-csr.mlir  03-binary-coo.mlir  03-binary-csr.mlir  04-segreduce-coo.mlir  04-segreduce-csr.mlir  05-spmm-weighted-coo.mlir  05-spmm-weighted-csr.mlir  06-spmm-gpu-coo.mlir  07-coo-to-csr-then-spmm.mlir  README.md  run.sh
experiments/sparsifier-coo-check/dumps/: 01-spmm-coo.lowered.mlir  01-spmm-coo.out.txt  01-spmm-csr.out.txt  02-scale-coo.lowered.mlir  02-scale-coo.out.txt  02-scale-csr.lowered.mlir  02-scale-csr.out.txt  03-binary-coo.lowered.mlir  03-binary-coo.out.txt  03-binary-csr.lowered.mlir  03-binary-csr.out.txt  04-segreduce-coo.lowered.mlir  04-segreduce-coo.out.txt  04-segreduce-csr.lowered.mlir  04-segreduce-csr.out.txt  05-spmm-weighted-coo.lowered.mlir  05-spmm-weighted-coo.out.txt  05-spmm-weighted-csr.lowered.mlir  05-spmm-weighted-csr.out.txt  06-spmm-gpu-coo-dense-outer-loop.lowered.mlir  07-gpu.lowered.mlir  07-gpu.out.txt
gnnc/: __init__.py  __main__.py  _torch_load_compat.py  cli.py  compile.py  ingress.py  lowering.py  paths.py
gnnc/conversion/tm_tensor_to_torch/: __init__.py  despecialize_sparse_mm_reduce.py  pipeline.py
gnnc/examples/: __init__.py
gnnc/examples/models/: __init__.py  gcn.py  mlp.py  sage.py  util.py
gnnc/execution/: __init__.py
gnnc/harness/: __init__.py  compare.py  golden.py  ingress.py  recipes.py  runner.py
gnnc/ingress/: __init__.py  importer.py
gnnc/passes/: __init__.py  _reg.py  assert_reshape_encoding.py
gnnc/pipeline/: phase.py  stage.py
gnnc/recipes/: __init__.py
gnnc/recipes/cpu/: passthrough.yaml  sparse-basic.yaml
gnnc/recipes/gpu/: sparse-basic.yaml
gnnc/schedule/: sparse.py
gnnc/src/: CMakeLists.txt
gnnc/src/include/GNNC/: Registration.h
gnnc/src/include/GNNC/Transforms/: CMakeLists.txt  Passes.h  Passes.td
gnnc/src/lib/CAPI/: CMakeLists.txt  Registration.cpp
gnnc/src/lib/Transforms/: CMakeLists.txt  SwitchBarFoo.cpp
gnnc/src/plugin/: CMakeLists.txt  gnnc-plugin.cpp
gnnc/src/python/: CMakeLists.txt  RegisterPasses.cpp
gnnc/tools/: __init__.py  gnnc.py  gnnc_bench.py  gnnc_import.py  gnnc_opt.py  util.py
gnnc/transform/: __init__.py  pipeline.py
gnnc/transform/rewrites/: __init__.py  despecialize_sparse_mm.py  despecialize_sparse_mm_reduce.py  util.py
internal-docs/: build-env.md  custom-cpp-passes.md  custom-lsp-server.md  ingress-architecture.md  lighthouse-integration-research.md  project-summary.md  repo-setup-checklist.md  repo-setup-plan.md  short-term-tasks.md  sparse-pipeline-comparison.md  sparse-tensor-framework-reference.md  task-1-fx-sparsity.md  task-2-gpu-sparsifier.md  task-3-pyg-baseline.md  upstream-wishlist.md  vscode-test-env.md
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/bench/: test_bench_golden.py
test/ingress/: gcn-ingress.mlir  sage-ingress.mlir
test/integration/: lighthouse_smoke.py  test_compile_matches_torch.py
test/lowering/: gpu-codegen-markers.mlir
test/pipeline/: canonicalize-trivial.mlir  test_cpp_pass_in_schedule.py
test/reference/: README.md  gcn.linalg-on-tensors.mlir  gcn.raw.mlir  gcn.torch.mlir  lit.local.cfg  sage.raw.mlir
test/transform/: assert-reshape-encoding.mlir  switch-bar-foo.mlir
tools/: build-gnnc.sh  build-llvm.sh  build-pyg-libs.sh  build-torch-mlir.sh  env.sh  link-stack.sh  predownload-datasets.py
