[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gnnc"
version = "0.0.0"
description = "GNN ahead-of-time compiler (PyG → MLIR sparse-tensor → GPU)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0 WITH LLVM-exception" }
authors = [{ name = "Bob Adolf", email = "rdadolf@gmail.com" }]

# Core dependencies. torch+PyG drive the ingress path; ogb supplies the
# standard graph datasets. torch-mlir and MLIR Python bindings are built from
# submodules (see internal-docs/repo-setup-plan.md §4), not installed as
# wheels. Lighthouse is likewise consumed as an in-tree submodule on
# PYTHONPATH (see tools/env.sh and
# internal-docs/lighthouse-integration-research.md), not pip-installed — so
# its own runtime deps that aren't otherwise satisfied (PyYAML for pipeline
# descriptors, ml_dtypes for bf16 numpy interop) are declared here.
# ml_dtypes is also needed at MLIR-Python load time.
#
# torch is pinned to a specific dated CUDA nightly so the build is
# reproducible — PyTorch's nightly index keeps roughly the last 30 days of
# dev wheels, so this pin will rot; bump in tandem with [tool.uv.sources]
# below and any cascading rebuilds (torch-mlir, source-built CUDA exts).
# The CUDA torch wheel runs CPU code fine; only triton kernels require an
# actual GPU at launch time, so CPU-baseline comparison work uses this same
# wheel. torch-scatter / torch-sparse / pyg-lib are needed only for PyG
# baseline comparison and require matching wheels from
# https://data.pyg.org/whl/ (post-install step, documented in README).
dependencies = [
    "numpy>=1.26,<3",
    "lit>=18",
    "filecheck>=1.0.1",
    "PyYAML>=6.0,<=6.0.1",
    "ml_dtypes>=0.5.0,<=0.6.0",
    "torch==2.13.0.dev20260514",
    "triton",
    "torch-geometric>=2.5",
    "ogb>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pre-commit>=4",
    "ipython>=8",
]

# Build-time deps for the out-of-tree LLVM/MLIR and torch-mlir builds. MLIR's
# CMake scripts inspect the active Python interpreter and require these to be
# importable. Pinned versions track
# third_party/llvm-project/mlir/python/requirements.txt. (PyYAML and
# ml_dtypes are also build-time MLIR requirements but are now core deps —
# see the [project].dependencies note above — so they're not repeated here.)
build = [
    "nanobind>=2.9,<3.0",
    "typing_extensions>=4.12.2",
]

[project.scripts]
gnnc = "gnnc.tools.gnnc:main"
gnnc-bench = "gnnc.tools.gnnc_bench:main"
gnnc-opt = "gnnc.tools.gnnc_opt:main"

# uv-specific wheel index resolution.
#
# PyTorch CUDA wheels are hosted on a separate index. We use the nightly
# CUDA 13 index so torch's recorded CUDA version aligns with the container
# CUDA 13 toolkit and the host CUDA 13 driver — this matters once we
# source-build CUDA extensions (pyg-lib, torch-scatter, torch-sparse) into
# the same venv, because those extensions are compiled against torch's
# headers and link against torch's libtorch.so.
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/nightly/cu130"
explicit = true

[tool.uv.sources]
# torch and its bundled triton fork (pytorch/triton, identifiable by the
# +git<sha> local version) both come from the pytorch-cuda index.
torch = { index = "pytorch-cuda" }
triton = { index = "pytorch-cuda" }

[tool.hatch.build.targets.wheel]
packages = ["gnnc"]

# ----- Pytest -----
# Single source of truth for pytest invocation. Both the pre-commit hook and
# the VSCode Testing sidebar invoke `pytest` with no extra args and inherit
# this config, so behavior is identical across CLI, hook, and IDE.
#
# `testpaths` scopes discovery to the main project; experiments/ is excluded
# by virtue of not being listed (each experiment is a one-shot probe with its
# own driver, not a regression target). `--ignore` excludes the Lighthouse
# end-to-end smoke — it's heavyweight and gated separately (run by hand or in
# CI, not on every pre-commit / every save).
[tool.pytest.ini_options]
testpaths = ["gnnc", "test"]
addopts = "-q --ignore=test/integration/lighthouse_smoke.py"

# ----- Ruff -----
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # handled by line-length; allow long strings/comments

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
